添加web socket 简单实现

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,13 +16,8 @@
                     data: $('#loginForm').serialize(),
                     dataType: "json",
                     success: function (data) {
-//                        alert(data.state);
-                        if ("success"===data.state) {
-                            window.location.href = "/user/userInfo";
-                        }else {
-                            alert(data.Msg);
-                        }
-
+//                        alert(data);
+                        window.location.href = "/userInfo";
                     },
                     error:function (e) {
                         console.log(e);
